--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
         <li class="layui-nav-item"><a href="/notes">笔记</a></li>
         <li class="layui-nav-item"><a href="/notebooks">笔记本</a></li>
         <li class="layui-nav-item"><a href="/tags">标签</a></li>
-        <li class="layui-nav-item"><a href="/">朋友圈</a></li>
+        <li class="layui-nav-item"><a href="/index">朋友圈</a></li>
     </ul>
     <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item">
