ADD：下载PDF（不完善）

--- a/views/note_area.ejs
+++ b/views/note_area.ejs
@@ -64,8 +64,12 @@
     <!-- 保存／丢弃按钮 -->
     <div class="note_save_discard_btn_group layui-btn-group layui-col-xs2 note_item">
         <button class="save_now_note layui-btn layui-btn-sm layui-btn-normal">
-            <i class="layui-icon">&#xe641;</i>
+            <i class="layui-icon">&#xe605;</i>
             <p class="btn_group_tip">保存</p>
+        </button>
+        <button class="download_now_note layui-btn layui-btn-sm layui-btn">
+            <i class="layui-icon">&#xe601;</i>
+            <p class="btn_group_tip">下载</p>
         </button>
         <button class="discard_now_note layui-btn layui-btn-sm layui-btn-danger">
             <i class="layui-icon">&#xe640;</i>
