--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,8 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
 <script src="/javascripts/summernote-zh-CN.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
+
 <script src="/layui/layui.js"></script>
 <script src="/javascripts/note_interaction.js"></script>
 <script src="/javascripts/header_interaction.js"></script>
