--- a/views/notes.ejs
+++ b/views/notes.ejs
@@ -104,6 +104,7 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.8/summernote.js"></script>
 <script src="/javascripts/summernote-zh-CN.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
 
 <script src="/layui/layui.js"></script>
 <script src="/javascripts/note_interaction.js"></script>
